--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -20,15 +19,14 @@
 </head>
 
 <body>
-
     <header class="header">
         <div class="logo">
             <a href="index.html"><img src="img/logoquest.png" alt="The Quest Logo"></a>
         </div>
         <div class="language-switch">
-            <img src="img/arrow-icon.svg" class="arrow-icon"></img> <!-- Иконка стрелки -->
+            <img src="img/arrow-icon.svg" class="arrow-icon" alt="Arrow Icon">
             <span>English</span>
-            <img src="img/language-icon.svg" class="icon"> <!-- Иконка глобуса -->
+            <img src="img/language-icon.svg" class="icon" alt="Language Icon">
             <ul class="language-menu">
                 <li data-lang="en">English</li>
                 <li data-lang="ru">Русский</li>
@@ -36,9 +34,7 @@
                 <li data-lang="fr">Français</li>
             </ul>
         </div>
-        
     </header>
-    
     <main>
         <div class="centered-content">
             <div class="centered-text">
@@ -48,11 +44,9 @@
             <div class="cta-button-container">
                 <img src="img/button-default.svg" alt="GET THE QUEST" class="cta-button">
             </div>
-        </div>        
+        </div>
     </main>
-      
-
     <script src="js/script.js"></script>
 </body>
-
 </html>
+
