--- a/templates/template.html
+++ b/templates/template.html
@@ -21,20 +21,25 @@
 <body>
   <header class="header">
     <div class="logo">
-      <a href="/home"><img src="static/img/logoquest.png" alt="The Quest Logo"></a>
+        <a href="/home"><img src="static/img/logoquest.png" alt="The Quest Logo"></a>
     </div>
-    <div class="language-switch">
-        <img src="static/img/arrow-icon.svg" class="arrow-icon" alt="Arrow Icon">
-        <span>English</span>
-        <img src="static/img/language-icon.svg" class="icon" alt="Language Icon">
-      <ul class="language-menu">
-        <li data-lang="en">English</li>
-        <li data-lang="ru">Русский</li>
-        <li data-lang="es">Español</li>
-        <li data-lang="fr">Français</li>
-      </ul>
+    <div class="header-right">
+        <div class="language-switch">
+            <img src="static/img/language-icon.svg" class="icon" alt="Language Icon">
+            <span>Select language</span>
+            <img src="static/img/arrow-icon.svg" class="arrow-icon" alt="Arrow Icon">
+            <ul class="language-menu">
+                <li data-lang="en">English</li>
+                <li data-lang="ru">Русский</li>
+                <li data-lang="es">Español</li>
+                <li data-lang="fr">Français</li>
+            </ul>
+        </div>
+        <button class="our-socials-btn">OUR SOCIALS</button>
     </div>
   </header>
+
+
   {% block body %}
   {% endblock %}
 
