--- a/templates/template.html
+++ b/templates/template.html
@@ -21,7 +21,7 @@
 <body>
   <header class="header">
     <div class="logo">
-        <a href="/home"><img src="static/img/logoquest.png" alt="The Quest Logo"></a>
+        <a href="/map"><img src="static/img/logoquest.png" alt="The Quest Logo"></a>
     </div>
     <div class="header-right">
         <div class="language-switch">
