--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,8 @@
+html
+Insert Code
+Edit
+Run
+Copy code
 {% extends 'template.html' %}
 
 {% block title %}
@@ -8,7 +13,9 @@
   <main>
     <div class="main-content">
       <div class="data">
-        <span class="sub-title" style="font-size: 2.5rem;">{{now_day}} {{current_month_name}} {{now_year}}</span>
+        <span class="sub-title" style="font-size: 2.5rem;">
+          {{ now_day }} {{ current_month_name }} {{ now_year }}
+        </span>
       </div>
     </div>
   </main>
