--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@ Copy code
       <div class="data">
         <span class="sub-title" style="font-size: 2.5rem;">
           {{ now_day }} {{ current_month_name }} {{ now_year }}
+          {{now}}
         </span>
       </div>
     </div>
