--- a/templates/map.html
+++ b/templates/map.html
@@ -12,7 +12,7 @@
           <h1 class="title">The Quest</h1>
         </div>
         <div class="cta-button-container">
-          <a href="/home"><img src="static/img/button-default.svg" alt="GET THE QUEST" class="cta-button"></a>
+          <a href="/info_center"><img src="static/img/button-default.svg" alt="GET THE QUEST" class="cta-button"></a>
         </div>
     </div>
     <script src="static/js/script.js"></script>
