--- a/templates/template.html
+++ b/templates/template.html
@@ -12,6 +12,8 @@
     <meta itemprop="name" content="The Quest"/>
     <title>{% block title %}{% endblock %}</title>
     <link rel="icon" type="image/png" href="static/img/logoquest.png">
+    {% block css %}
+    {% endblock %}
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
