--- a/templates/template.html
+++ b/templates/template.html
@@ -46,7 +46,7 @@
 
   <div class="navigation-bar">
     <div class="navigation-icons">
-        <a href="/infocenter" class="nav-link {% if request.path == '/infocenter' %}active{% endif %}">
+        <a href="/info_center" class="nav-link {% if request.path == '/info_center' %}active{% endif %}">
             <img src="static/img/infocenter-icon.svg" alt="InfoCenter" class="nav-icon" id="infocenter-icon">
         </a>
         <a href="/map" class="nav-link {% if request.path == '/map' %}active{% endif %}">
