--- a/static/css/info_center.css
+++ b/static/css/info_center.css
@@ -12,11 +12,11 @@
 
 h3 {
     font-size: 15px;
-    border: inset 0 0 0 2px #5EF5FF;
+    border: solid 3px #5EF5FF;
+    border-radius: 10px;
     color: #5EF5FF;
     height: 31px;
     width: 150px;
-    display: flex;
-    justify-content: center;
     position: relative;
+    text-align: center;
 }
