--- a/templates/template.html
+++ b/templates/template.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Официальный сайт, посвященный The Quest.">
-    <meta name="keywords" content="The Quest, game, AR game, Quests">
-    <meta property="og:site_name" content="The Quest">
-    <meta property="og:title" content="The Quest"/>
-    <meta property="og:type" content="website">
-    <meta itemprop="name" content="The Quest"/>
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="icon" type="image/png" href="static/img/logoquest.png">
-    {% block css %}
-    {% endblock %}
-    <link rel="stylesheet" href="static/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Официальный сайт, посвященный The Quest.">
+  <meta name="keywords" content="The Quest, game, AR game, Quests">
+  <meta property="og:site_name" content="The Quest">
+  <meta property="og:title" content="The Quest"/>
+  <meta property="og:type" content="website">
+  <meta itemprop="name" content="The Quest"/>
+  <title>{% block title %}{% endblock %}</title>
+  <link rel="icon" type="image/png" href="static/img/logoquest.png">
+  {% block css %}
+  {% endblock %}
+  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -49,7 +49,7 @@
         <a href="/info_center" class="nav-link {% if request.path == '/info_center' %}active{% endif %}">
             <img src="static/img/infocenter-icon.svg" alt="InfoCenter" class="nav-icon" id="infocenter-icon">
         </a>
-        <a href="/map" class="nav-link {% if request.path == '/map' %}active{% endif %}">
+        <a href="/map" class="nav-link active">
             <img src="static/img/map-icon.svg" alt="Map" class="nav-icon" id="map-icon">
         </a>
         <a href="/profile" class="nav-link {% if request.path == '/profile' %}active{% endif %}">
@@ -59,6 +59,6 @@
   </div>
 
 
-
+  <script src="static/js/script.js"></script>
 </body>
 </html>
