--- a/static/css/info_center.css
+++ b/static/css/info_center.css
@@ -24,9 +24,9 @@
     color: #5EF5FF;
     height: 31px;
     width: 150px;
-    display: flex; /* Используем Flexbox */
-    justify-content: center; /* Выравнивание по горизонтали */
-    align-items: center; /* Выравнивание по вертикали */
+    display: flex;
+    justify-content: center;
+    align-items: center; 
     text-align: center; 
 }
 
