--- a/templates/template.html
+++ b/templates/template.html
@@ -46,13 +46,13 @@
 
   <div class="navigation-bar">
     <div class="navigation-icons">
-        <a href="/info_center" class="nav-link {% if request.path == '/info_center' %}active{% endif %}">
+        <a href="/info_center" class="nav-link">
             <img src="static/img/infocenter-icon.svg" alt="InfoCenter" class="nav-icon" id="infocenter-icon">
         </a>
-        <a href="/map" class="nav-link active">
-            <img src="static/img/map-icon.svg" alt="Map" class="nav-icon" id="map-icon">
-        </a>
-        <a href="/profile" class="nav-link {% if request.path == '/profile' %}active{% endif %}">
+        <a href="/map" class="nav-link">
+          <img src="static/img/map-icon.svg" alt="Map" class="nav-icon" id="map-icon">
+      </a>      
+        <a href="/profile" class="nav-link">
             <img src="static/img/profile-icon.svg" alt="Profile" class="nav-icon" id="profile-icon">
         </a>
     </div>
