--- a/templates/info_center.html
+++ b/templates/info_center.html
@@ -14,15 +14,16 @@
 
       <div class="main-content">
         <span class="sub-title">{{ now_day }} {{ current_month_name }} {{ now_year }}</span>
-        <h3>New post</h3>
+        <p>New post</p>
 
       </div>
+
       <div class="main-text">
-        <h1>We launched «The Quest» website!</h1>
+        <p>We launched «The Quest» website!</p>
       </div>
 
       <div>
-        <a href="/map">Read more --</a>
+        <a href="/map">READ MORE ➞</a>
       </div>
     </div>
     
