--- a/templates/info_center.html
+++ b/templates/info_center.html
@@ -14,7 +14,7 @@
 
       <div class="main-content">
         <span class="sub-title">{{ now_day }} {{ current_month_name }} {{ now_year }}</span>
-        <p>New post</p>
+        <p>NEW POST</p>
 
       </div>
 
