--- a/templates/template.html
+++ b/templates/template.html
@@ -14,33 +14,33 @@
   <link rel="icon" type="image/png" href="static/img/logoquest.png">
   {% block css %}
   {% endblock %}
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/navigation.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header class="header">
-    <div class="logo">
-        <a href="/map"><img src="static/img/logoquest.png" alt="The Quest Logo"></a>
-    </div>
-    <div class="header-right">
-        <div class="language-switch">
-            <img src="static/img/language-icon.svg" class="icon" alt="Language Icon">
-            <span>Select language</span>
-            <img src="static/img/arrow-icon.svg" class="arrow-icon" alt="Arrow Icon">
-            <ul class="language-menu">
-                <li data-lang="en">English</li>
-                <li data-lang="ru">Русский</li>
-                <li data-lang="es">Español</li>
-                <li data-lang="fr">Français</li>
-            </ul>
-        </div>
-        <button class="our-socials-btn">OUR SOCIALS</button>
-    </div>
-  </header>
-
+    <header class="header {{ header_class }}">
+      <div class="logo">
+          <a href="/map"><img src="static/img/logoquest.png" alt="The Quest Logo"></a>
+      </div>
+      <div class="header-right">
+          <div class="language-switch">
+              <img src="static/img/language-icon.svg" class="icon" alt="Language Icon">
+              <span>Select language</span>
+              <img src="static/img/arrow-icon.svg" class="arrow-icon" alt="Arrow Icon">
+              <ul class="language-menu">
+                  <li data-lang="en">English</li>
+                  <li data-lang="ru">Русский</li>
+                  <li data-lang="es">Español</li>
+                  <li data-lang="fr">Français</li>
+              </ul>
+          </div>
+          <button class="our-socials-btn">OUR SOCIALS</button>
+      </div>
+    </header>
   {% block body %}
   {% endblock %}
 
