--- a/static/css/header.css
+++ b/static/css/header.css
@@ -3,20 +3,16 @@
     display: flex;
     justify-content: space-between; /* Элементы выравниваются по краям */
     align-items: center;
-    padding: 0 250px; /* Отступы слева и справа */
+    padding: 0px 250px; /* Отступы слева и справа */
+    margin-top: 48px;
     font-family: 'Chakra Petch', sans-serif;
     color: #fff;
     position: fixed;
     width: 100%;
-    height: 100px;
     z-index: 1000; /* На переднем плане */
     box-sizing: border-box;
 }
 
-/* Черный хедер */
-.black-header {
-    background-color: black;
-}
 
 /* Прозрачный хедер */
 .transparent-full-header {
@@ -53,9 +49,9 @@
 }
 
 .language-menu {
-    display: none;
+    display: none; /* Меню скрыто по умолчанию */
     position: absolute;
-    top: 100%; /* Меню всегда под переключателем */
+    top: 100%; /* Меню располагается ниже переключателя */
     right: 0;
     background: #222;
     border-radius: 5px;
@@ -66,6 +62,21 @@
     padding: 0;
     overflow: hidden; 
 }
+
+/* Активное меню (показать) */
+.language-menu.language-menu-active {
+    display: block;
+}
+
+/* Иконка стрелки (поворот) */
+.arrow-icon {
+    transition: transform 0.3s ease;
+}
+
+.arrow-icon.arrow-rotated {
+    transform: rotate(180deg); /* Поворачиваем стрелку */
+}
+
 
 /* Стили для элементов списка */
 .language-menu li {
