--- a/static/css/info_center.css
+++ b/static/css/info_center.css
@@ -1,5 +1,5 @@
 body, html {
-    background: url('/static/img/Горы.png') no-repeat center center/cover;
+    background-color: #000000;
     margin: 0;
     padding: 0;
     height: 100vh; /* Высота экрана */
