--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,7 @@ main {
     cursor: pointer; /* Для работы hover на всем блоке */
     transition: all 0.2s;
     position: relative;
+    margin-top: 200px;
 }
 
 .centered-text {
@@ -113,52 +114,7 @@ main {
     color: #FFCE00; /* Специальный цвет для "The Quest" */
 }
 
-/* Navigation bar */
-.navigation-bar {
-    position: fixed;
-    bottom: 100px; /* Отступ от низа */
-    left: 50%;
-    transform: translateX(-50%);
-    width: 308px;
-    height: 60px;
-    background-color: rgba(37, 37, 37, 0.25);
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Тень */
-    z-index: 1000;
-}
 
-/* Navigation icons */
-.navigation-icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 55px; /* Расстояние между иконками */
-}
-
-/* Navigation icon */
-.nav-icon {
-    transition: transform 0.3s ease;
-}
-
-/* Hover эффект */
-.nav-icon:hover {
-    transform: scale(1.05); /* Увеличение иконки */
-}
-
-/* Размер для активной иконки */
-.nav-link.active .nav-icon {
-    width: 48px;
-    height: 48px;
-}
-
-/* Размер для неактивных иконок */
-.nav-link.inactive .nav-icon {
-    width: 40px;
-    height: 40px;
-}
 
 
 
