Ready info_center

--- a/templates/info_center.html
+++ b/templates/info_center.html
@@ -9,12 +9,13 @@
 {% endblock %}
 
 
-{% block body %}
+
   <main>
+    {% block body %}
     <div class="container">
       <div class="info">
         <div class="main-content">
-          <span class="sub-title">{{ now_day }} {{ current_month_name }} {{ now_year }}</span>
+          <span class="sub-title">24 November 2024</span>
           <p>NEW POST</p>
 
         </div>
