--- a/static/css/header.css
+++ b/static/css/header.css
@@ -7,7 +7,7 @@
     margin-top: 48px;
     font-family: 'Chakra Petch', sans-serif;
     color: #fff;
-    position: fixed;
+    position: relative;
     width: 100%;
     z-index: 1000; /* На переднем плане */
     box-sizing: border-box;
