--- a/static/css/info_center.css
+++ b/static/css/info_center.css
@@ -1,10 +1,20 @@
 body, html {
-    background-color: #000000;
+    background: url(/static/img/herosection.png);
     margin: 0;
     padding: 0;
     height: 100vh; /* Высота экрана */
     overflow-x: hidden; /* Убираем горизонтальный скролл */
     font-family: 'Chakra Petch', sans-serif;
+}
+
+/* Стили выделения текста */
+::selection {
+    background: transparent; 
+    color: #FF4E47; 
+}
+::-moz-selection {
+    background: transparent; 
+    color: #FF4E47;
 }
 
 .sub-title {
@@ -22,8 +32,13 @@ body, html {
 }
 
 .container {
-    padding-top: 225px;
+    border-bottom: 1px solid rgb(39, 39, 39);
+    height: 677px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end; /* Выравнивание по низу */
 }
+
 
 .info {
     margin: 0px 250px 0;
@@ -38,9 +53,11 @@ body, html {
 
 .main-content p {
     font-size: 15px;
+    font-weight: 500;
     border: solid 3px #5EF5FF;
     border-radius: 5px;
     color: #5EF5FF;
+    background: rgb(94, 246, 255, 15%);
     height: 31px;
     width: 150px;
     display: flex;
@@ -59,7 +76,6 @@ body, html {
     color: white;
 }
 
-
 /* кнопки news, updates, events */
   
 .menu {
@@ -73,30 +89,31 @@ body, html {
     background-color: #0D0D0D;
     color: #ACACAC;
     border: none;
-    font-size: 16px;
-    padding: 15px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 2%;
     text-align: center;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
+    margin-right: 20px;
 }
 
 .menu-button:not(.active):hover {
-    background-color: grey;
+    background-color: #131313;
 }
 
 .menu-button.active {
-    color: gold;
+    color: #FFCE00;
     border-top: 2px solid #FFCE00; /* Подчеркивание активной кнопки */
 }
 
 .content {
     padding: 20px;
-    font-size: 18px;
 }
   
-  
 .news-events-updates{
-    background: url('../img/HeroSection.png') no-repeat center center/cover;
+    background: url('../img/bg.png') no-repeat center center/cover;
+    height: 1000px;
     background-color: #111;
     color: antiquewhite;
 }
