--- a/templates/map.html
+++ b/templates/map.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
 {% endblock %}
 
-
 {% block body %}
   <main>
     <div class="centered-content">
@@ -21,6 +20,12 @@
           <a href="/info_center"><img src="static/img/button-default.svg" alt="GET THE QUEST" class="cta-button"></a>
         </div>
     </div>
+
+    <div class="fixed-text-block">
+      <p class="first-text">The Quest - it just a game.</p>
+      <p class="second-text">For investment inquiries, <a href="/map"> reach out</a> to us.</p>
+    </div>
+    
     <script src="static/js/script.js"></script>
   </main>
 {% endblock %}
