--- a/templates/map.html
+++ b/templates/map.html
@@ -25,6 +25,11 @@
       <p class="first-text">The Quest - it just a game.</p>
       <p class="second-text">For investment inquiries, <a href="/map"> reach out</a> to us.</p>
     </div>
+
+    <div class="privacy-block">
+      <a class="privacy-text">Jobs opening</a>
+      <a class="privacy-text">Privacy and Policy</a>
+    </div>
     
     <script src="static/js/script.js"></script>
   </main>
