--- a/static/css/header.css
+++ b/static/css/header.css
@@ -127,3 +127,110 @@
 }
 
 
+
+/* OUR SOCIALS */
+
+#overlay {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+#content-block {
+    position: fixed;
+    width: 950px;
+    height: 850px;
+    max-width: 90%; /* чтобы блок не выходил за пределы экрана на маленьких устройствах */
+    background-color: rgb(0, 0, 0);
+    z-index: 2;
+}
+
+#close-block {
+    margin-top: 15px;
+    margin-left: 900px;
+    width: 30px;
+    height: 30px;
+    background-color: #11111100;
+    border: none;
+    cursor: pointer;
+}
+
+#block {
+    width: 790px;
+    height: 693px;
+    margin: 78px;
+}
+
+#main-text {
+    margin-bottom: 30px;
+}
+
+#main-text p{
+    font-size: 98px;
+    color: #5EF6FF;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+#socials {
+    width: 790px;
+    height: 370px;
+    display: flex;
+    justify-content:space-between; /* Выравнивание элементов в начале */
+    gap: 5px; /* Отступ между элементами */
+
+}
+
+#socials a{
+    width: 150px;
+    height: 350px;
+}
+
+#socials a img {
+    width: 100%; /* Занимает всю ширину ссылки */
+    height: 100%; /* Занимает всю высоту ссылки */
+    object-fit: cover; /* Сохраняет пропорции изображения */
+}
+
+#contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: #4B4B4B;
+}
+
+#line {
+    width: 210px;
+    border: none; /* Убираем стандартные границы */
+    border-top: 1px solid #4B4B4B; /* Линия */
+    margin: 0 10px; /* Отступы между линией и текстом */
+}
+
+#text {
+    white-space: nowrap; /* Запрет на перенос текста */
+}
+
+#send-msg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#send-btn {
+    width: 320px;
+    height: 50px;
+    background-color: #5EF6FF;
+    color: #111;
+    text-align: center;
+    font-size: 19px;
+    cursor: pointer;
+}
