--- a/templates/map.html
+++ b/templates/map.html
@@ -11,6 +11,7 @@
 
 {% block body %}
   <main>
+
     <div class="centered-content">
         <div class="centered-text">
           <span class="welcome">Welcome to</span>
@@ -20,17 +21,18 @@
           <a href="/info_center"><img src="static/img/button-default.svg" alt="GET THE QUEST" class="cta-button"></a>
         </div>
     </div>
+    
+  </main>
 
+  <div class="privacy-policy">
     <div class="fixed-text-block">
       <p class="first-text">The Quest - it just a game.</p>
-      <p class="second-text">For investment inquiries, <a href="/map"> reach out</a> to us.</p>
+      <p class="second-text">For investment inquiries, <a href="/map">please reach</a> out to us.</p>
     </div>
 
     <div class="privacy-block">
-      <a class="privacy-text">Jobs opening</a>
-      <a class="privacy-text">Privacy and Policy</a>
+      <a href="#">Jobs opening</a>
+      <a href="#">Privacy and Policy</a>
     </div>
-    
-    <script src="static/js/script.js"></script>
-  </main>
+  </div>
 {% endblock %}
