--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,14 +5,25 @@
 {% endblock %}
 
 {% block css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/info_center.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
 {% endblock %}
 
 {% block body %}
   <main>
-    <div class="main-content">
-      <span class="sub-title">{{ now_day }} {{ current_month_name }} {{ now_year }}</span>
-      <h3>New post</h3>
+    <div class="blinking-text">
+      <span>М</span>
+      <span>и</span>
+      <span>г</span>
+      <span>а</span>
+      <span>ю</span>
+      <span>щ</span>
+      <span>и</span>
+      <span>й</span>
+      <span> </span>
+      <span>т</span>
+      <span>е</span>
+      <span>к</span>
+      <span>с</span>
     </div>
     
   </main>
