--- a/templates/template.html
+++ b/templates/template.html
@@ -43,7 +43,7 @@
         </div>
           
 
-          <button class="our-socials-btn">OUR SOCIALS</button>
+          <button class="our-socials-btn socials">OUR SOCIALS</button>
           <div id="overlay" style="display: none;">
             <div id="content-block">
                 <button type="button" id="close-block"><img src="/static/img/icon-close.png" alt="Кнопка" /></button>
