--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 
 body, html {
+    max-width: 100%;
     margin: 0;
     padding: 0;
     color: #fff;
@@ -64,7 +65,8 @@ main {
     font-size: 128px;
     font-family: 'Chakra Petch', sans-serif;
     font-weight: bold;
-    color: transparent;
+    color: #070306; /* Основной цвет текста */
+    text-shadow: 0px 0px 16px rgba(255, 206, 0, 1); /* Желтая тень */
     -webkit-text-stroke: 2px #FFCE00; /* Обводка текста */
     line-height: 128px; /* Межстрочное расстояние */
     margin: 0px;
