--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,25 +6,11 @@
 
 {% block css %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 {% endblock %}
 
 {% block body %}
   <main>
-    <div class="blinking-text">
-      <span>М</span>
-      <span>и</span>
-      <span>г</span>
-      <span>а</span>
-      <span>ю</span>
-      <span>щ</span>
-      <span>и</span>
-      <span>й</span>
-      <span> </span>
-      <span>т</span>
-      <span>е</span>
-      <span>к</span>
-      <span>с</span>
-    </div>
     
   </main>
 {% endblock %}
