--- a/templates/map.html
+++ b/templates/map.html
@@ -26,7 +26,7 @@
 
   <div class="privacy-policy">
     <div class="fixed-text-block">
-      <p class="first-text">Theлою Quest - it just a game.</p>
+      <p class="first-text">The Quest - it just a game.</p>
       <p class="second-text">For investment inquiries, <a href="/map">please reach</a> out to us.</p>
     </div>
 
