--- a/templates/template.html
+++ b/templates/template.html
@@ -46,7 +46,7 @@
           <button class="our-socials-btn socials">OUR SOCIALS</button>
           <div id="overlay" style="display: none;">
             <div id="content-block">
-                <button type="button" id="close-block"><img src="/static/img/icon-close.png" alt="Кнопка" /></button>
+                <button type="button" id="close-block"><img src="/static/img/icon-close.png" alt="Close" /></button>
                 
                 <div id="block">
                     <div id="main-text">
